# Kardashev-CLI

./: AGENTS.md  CHANGELOG.md  PNPM.md  README.md  cliff.toml  justfile
.devcontainer/: README.md  devcontainer.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  4-feature-request.yml
.github/kardashev/labels/: codex-attempt.md  codex-review.md  codex-rust-review.md  codex-triage.md
.github/workflows/: cargo-deny.yml  ci.yml  cla.yml  issue-deduplicator.yml  issue-labeler.yml  rust-ci.yml  rust-release.yml  sdk.yml  shell-tool-mcp-ci.yml  shell-tool-mcp.yml
codex-rs/: Cargo.toml
codex-rs/core/: prompt.md
codex-rs/core/src/: model_provider_info.rs  (+1 more)
docs/: advanced.md  agents_md.md  authentication.md  config.md  contributing.md  example-config.md  exec.md  execpolicy.md  experimental.md  faq.md  getting-started.md  install.md  open-source-fund.md  prompts.md  release_management.md  skills.md  zdr.md
kardashev-cli/: README.md  package-lock.json  package.json
kardashev-cli/scripts/: README.md  build_container.sh  build_npm_package.py  init_firewall.sh  install_native_deps.py  run_in_container.sh
kardashev-rs/: Cargo.toml  README.md
kardashev-rs/ansi-escape/: Cargo.toml
kardashev-rs/app-server/: Cargo.toml
kardashev-rs/app-server-protocol/: Cargo.toml
kardashev-rs/app-server-test-client/: Cargo.toml
kardashev-rs/app-server-test-client/src/: main.rs
kardashev-rs/apply-patch/: Cargo.toml
kardashev-rs/arg0/: Cargo.toml
kardashev-rs/arg0/src/: lib.rs
kardashev-rs/backend-client/: Cargo.toml
kardashev-rs/backend-client/src/: client.rs  types.rs
kardashev-rs/chatgpt/: Cargo.toml
kardashev-rs/cli/: Cargo.toml
kardashev-rs/cloud-tasks/: Cargo.toml
kardashev-rs/cloud-tasks-client/: Cargo.toml
kardashev-rs/common/: Cargo.toml
kardashev-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  oss.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
kardashev-rs/core/: Cargo.toml  README.md  gpt-5.1-kardashev-max_prompt.md  gpt_5_1_prompt.md  gpt_5_kardashev_prompt.md  prompt.md
kardashev-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs  test_kardashev.rs  test_kardashev_exec.rs
kardashev-rs/exec/: Cargo.toml
kardashev-rs/exec-server/: Cargo.toml
kardashev-rs/execpolicy/: Cargo.toml  README.md
kardashev-rs/execpolicy-legacy/: Cargo.toml
kardashev-rs/feedback/: Cargo.toml
kardashev-rs/feedback/src/: lib.rs
kardashev-rs/file-search/: Cargo.toml  README.md
kardashev-rs/kardashev-api/: Cargo.toml  README.md
kardashev-rs/kardashev-backend-openapi-models/: Cargo.toml
kardashev-rs/kardashev-client/: Cargo.toml  README.md
kardashev-rs/linux-sandbox/: Cargo.toml  README.md
kardashev-rs/lmstudio/: Cargo.toml
kardashev-rs/login/: Cargo.toml
kardashev-rs/mcp-server/: Cargo.toml
kardashev-rs/mcp-types/: generate_mcp_types.py
kardashev-rs/ollama/: Cargo.toml
kardashev-rs/otel/: Cargo.toml
kardashev-rs/process-hardening/: Cargo.toml
kardashev-rs/protocol/: Cargo.toml  README.md
kardashev-rs/responses-api-proxy/: Cargo.toml  README.md
kardashev-rs/rmcp-client/: Cargo.toml
kardashev-rs/stdio-to-uds/: Cargo.toml
kardashev-rs/tui/: Cargo.toml
kardashev-rs/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
scripts/: debug-codex.sh  stage_npm_packages.py
sdk/typescript/: README.md  package.json
shell-tool-mcp/: README.md  package.json
(+412 files in other folders)
