[package]
name = "codex-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kardashev_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-apply-patch = { workspace = true }
kardashev-core = { workspace = true }
codex-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
