[package]
name = "codex-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"], optional = true }
kardashev-core = { workspace = true }
codex-lmstudio = { workspace = true }
codex-ollama = { workspace = true }
kardashev-protocol = { workspace = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "serde", "toml"]
elapsed = []
sandbox_summary = []
