[package]
name = "codex-feedback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
kardashev-protocol = { workspace = true }
sentry = { version = "0.34" }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
